--- a/index.html
+++ b/index.html
@@ -1,24 +1,61 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Velez Advanced Systems</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Robotics R&D by Francisco Isidoro Velez">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Velez Advanced Systems</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body style="font-family:Arial, sans-serif; margin:0; padding:0; background:#f4f4f4;">
-    <header style="background:#333; color:#fff; padding:20px 0; text-align:center;">
-        <h1>Velez Advanced Systems</h1>
-        <p>Robotics R&D | Gait, Balance, Power, and Control Systems</p>
-    </header>
-    <main style="padding:40px; text-align:center;">
-        <h2>Welcome</h2>
-        <p>This site showcases the research and development efforts led by Francisco I. Velez in the field of humanoid robotics.</p>
-        <p>Stay tuned for updates and documentation on scaled prototypes, battery technologies, and control systems.</p>
-    </main>
-    <footer style="background:#222; color:#ccc; text-align:center; padding:10px;">
-        <p>&copy; 2025 Velez Advanced Systems. All rights reserved.</p>
-    </footer>
+<body class="bg-gray-50 text-gray-800">
+  <header class="bg-white shadow">
+    <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+      <h1 class="text-3xl font-bold text-gray-900">Velez Advanced Systems</h1>
+      <p class="text-gray-600 text-sm">Innovating Robotics for Human-Centric Performance</p>
+    </div>
+  </header>
+
+  <main class="mt-10">
+    <section class="bg-blue-100 py-16">
+      <div class="max-w-5xl mx-auto px-6 text-center">
+        <h2 class="text-4xl font-extrabold mb-4">Robotics R&D Portfolio</h2>
+        <p class="text-lg text-gray-700">Exploring scalable humanoid systems from concept to control—phase-by-phase, responsibly engineered for the real world.</p>
+      </div>
+    </section>
+
+    <section class="py-16">
+      <div class="max-w-6xl mx-auto px-6">
+        <h3 class="text-2xl font-semibold mb-4">About VAS</h3>
+        <p class="mb-4">Velez Advanced Systems (VAS) is a research-driven robotics company focused on human-scale autonomous systems. We prioritize scalable architectures, efficient power systems, and biologically inspired control strategies.</p>
+        <p>Our phased prototyping approach ensures each subsystem is validated before full-scale deployment.</p>
+      </div>
+    </section>
+
+    <section class="bg-gray-100 py-16">
+      <div class="max-w-6xl mx-auto px-6">
+        <h3 class="text-2xl font-semibold mb-4">Current Project</h3>
+        <p class="mb-2">We are currently in Phase 1 of a humanoid robotics program. This 1:3 scale prototype focuses on gait, balance, and servo control. It integrates:</p>
+        <ul class="list-disc list-inside text-gray-700">
+          <li>Dynamixel smart servos</li>
+          <li>Solid-state Li-ion battery systems</li>
+          <li>9-DoF IMUs for orientation and balance</li>
+          <li>Custom spine and joint assembly for realistic motion</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="py-16">
+      <div class="max-w-6xl mx-auto px-6">
+        <h3 class="text-2xl font-semibold mb-4">Contact</h3>
+        <p class="mb-2">Email: <a href="mailto:info@velezsystems.com" class="text-blue-600">info@velezsystems.com</a></p>
+        <p>Location: Colorado Springs, CO</p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="bg-white mt-12 shadow-inner">
+    <div class="max-w-6xl mx-auto py-6 px-4 text-center text-sm text-gray-500">
+      &copy; 2025 Velez Advanced Systems. All rights reserved.
+    </div>
+  </footer>
 </body>
 </html>
